# algo-running-on-pythonanywhere

./: .gitignore  .replit  build.sh  config.json  data.html  flask_app.py  kite_trade.py  log_files.yml  pyproject.toml  pythonanywhere.py  requirements.txt  sample.html  sample_back.html  wave_kite.py  wsgi.py
algo/2023-01-10/: kwaveAlgo.csv
algo/2023-01-11/: kwaveAlgo.csv
algo/2023-01-13/: kwaveAlgo.csv
algo/2023-01-13_old/: kwaveAlgo.csv
algo/2023-01-16/: kwaveAlgo.csv
algo/2023-01-17/: kwaveAlgo.csv
algo/2023-01-18/: kwaveAlgo.csv
algo/2023-01-19/: kwaveAlgo.csv
algo/2023-01-20/: kwaveAlgo.csv
algo/2023-01-23/: kwaveAlgo.csv
algo/2023-01-23_old/: kwaveAlgo.csv
algo/2023-01-24/: kwaveAlgo.csv
algo/2023-01-25/: kwaveAlgo.csv
