[tool.poetry]
name = "repl_nix_algo"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
finta = "^1.3"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.2"
numpy = "^1.24.1"
pandas = "^1.5.2"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
